# discord-court-bot

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: handler.rs  lawsuit.rs  main.rs  model.rs
